# csv-table-view

./: README.md  connections.csv  pyproject.toml
src/: __init__.py
