[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csv-view"
version = "0.1.0"
description = "A command line tool to view CSV files in a pretty table format"
requires-python = ">=3.7"
dependencies = ["rich>=10.0.0"]

[project.scripts]
csv-view = "src:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
